Subfinal version of thesis
Final plot scripts, a lot of changes to the written document

--- a/Thesis/Thesis_Ludo.bib
+++ b/Thesis/Thesis_Ludo.bib
@@ -1,4 +1,28 @@
-﻿@inbook{Bengio2012,
+﻿@article{Arsenault2014,
+   author = {Arsenault, Richard and Poulin, Annie and Côté, Pascal and Brissette, François},
+   title = {Comparison of stochastic optimization algorithms in hydrological model calibration},
+   journal = {Journal of Hydrologic Engineering},
+   volume = {19},
+   number = {7},
+   pages = {1374-1384},
+   ISSN = {1084-0699},
+   year = {2014},
+   type = {Journal Article}
+}
+
+@article{Bardossy2008,
+   author = {Bárdossy, A and Singh, SK},
+   title = {Robust estimation of hydrological model parameters},
+   journal = {Hydrology and earth system sciences},
+   volume = {12},
+   number = {6},
+   pages = {1273-1283},
+   ISSN = {1027-5606},
+   year = {2008},
+   type = {Journal Article}
+}
+
+@inbook{Bengio2012,
    author = {Bengio, Yoshua},
    title = {Practical Recommendations for Gradient-Based Training of Deep Architectures},
    booktitle = {Neural Networks: Tricks of the Trade: Second Edition},
@@ -32,6 +56,47 @@ Uncertainty},
    type = {Journal Article}
 }
 
+@article{Beven2001,
+   author = {Beven, Keith and Freer, Jim},
+   title = {Equifinality, data assimilation, and uncertainty estimation in mechanistic modelling of complex environmental systems using the {GLUE} methodology},
+   journal = {Journal of Hydrology},
+   volume = {249},
+   number = {1},
+   pages = {11-29},
+   abstract = {It may be endemic to mechanistic modelling of complex environmental systems that there are many different model structures and many different parameter sets within a chosen model structure that may be behavioural or acceptable in reproducing the observed behaviour of that system. This has been called the equifinality concept. The generalised likelihood uncertainty estimation (GLUE) methodology for model identification allowing for equifinality is described. Prediction within this methodology is a process of ensemble forecasting using a sample of parameter sets from the behavioural model space, with each sample weighted according to its likelihood measure to estimate prediction quantiles. This allows that different models may contribute to the ensemble prediction interval at different time steps and that the distributional form of the predictions may change over time. Any effects of model nonlinearity, covariation of parameter values and errors in model structure, input data or observed variables, with which the simulations are compared, are handled implicitly within this procedure. GLUE involves a number of choices that must be made explicit and can be therefore subjected to scrutiny and discussion. These include ways of combining information from different types of model evaluation or from different periods in a data assimilation context. An example application to rainfall-runoff modelling is used to illustrate the methodology, including the updating of likelihood measures.},
+   keywords = {TOPMODEL
+Maimai catchment
+Rainfall-runoff modelling
+Parameter conditioning
+Prediction uncertainty
+GLUE},
+   ISSN = {0022-1694},
+   DOI = {https://doi.org/10.1016/S0022-1694(01)00421-8},
+   year = {2001},
+   type = {Journal Article}
+}
+
+@article{Bianchini1994,
+   author = {Bianchini, M. and Gori, M. and Maggini, M.},
+   title = {On the problem of local minima in recurrent neural networks},
+   journal = {IEEE Transactions on Neural Networks},
+   volume = {5},
+   number = {2},
+   pages = {167-177},
+   ISSN = {1941-0093},
+   DOI = {10.1109/72.279182},
+   year = {1994},
+   type = {Journal Article}
+}
+
+@article{Breuel2015,
+   author = {Breuel, Thomas M},
+   title = {The effects of hyperparameters on {SGD} training of neural networks},
+   journal = {arXiv preprint arXiv:1508.02788},
+   year = {2015},
+   type = {Journal Article}
+}
+
 @article{Burbidge1988,
    author = {Burbidge, John B. and Magee, Lonnie and Robb, A. Leslie},
    title = {Alternative Transformations to Handle Extreme Values of the Dependent Variable},
@@ -42,7 +107,6 @@ Uncertainty},
    abstract = {[Transformations that could be used to reduce the influence of extreme observations of dependent variables, which can assume either sign, on regression coefficient estimates are studied in this article. Two that seem reasonable on a priori grounds--the extended Box-Cox (BC) and the inverse hyperbolic sine (IHS)--are evaluated in detail. One feature is that the log-likelihood function for IHS is defined for zero values of the dependent variable, which is not true of BC. The double-length regression technique (Davidson and MacKinnon 1984) is used to perform hypothesis tests of one transformation against the other using Canadian data on household net worth. These tests support the use of IHS instead of BC for this data set. Empirical investigators in economics often work with a logged dependent variable (taking the natural logarithm of a data series is, of course, a special case of BC) to reduce the weight their particular estimation procedure might otherwise attach to extreme values of the dependent variable. Logging dependent and independent variables has the added attraction that slope coefficients may be interpreted as elasticities. In the event that the dependent variable assumes nonpositive values, some researchers (e.g., Diamond and Hausman 1984; King and Dicks-Mireaux 1982) have dropped the nonpositive values and others have added a constant so that each observation is positive. An alternative transformation, which is defined for any real number, is the IHS transformation, <tex-math>$\operatorname{sinh}^{-1}(x) = \log(x + (x^2 + 1)^{1/2})$</tex-math>. This was proposed in Johnson (1949) and is just as easy to employ as the BC transformation.]},
    ISSN = {01621459},
    DOI = {10.2307/2288929},
-   url = {http://www.jstor.org/stable/2288929},
    year = {1988},
    type = {Journal Article}
 }
@@ -98,7 +162,7 @@ Uncertainty},
 
 @article{Diba2021,
    author = {Diba, F.D. and Samad, M.A. and Ghimire, J. and Choi, D.},
-   title = {Wireless Telecommunication Links for Rainfall Monitoring: Deep Learning Approach and Experimental Results},
+   title = {Wireless Telecommunication Links for Rainfall Monitoring: {Deep} Learning Approach and Experimental Results},
    journal = {IEEE},
    volume = {9},
    pages = {11},
@@ -107,15 +171,16 @@ Uncertainty},
    type = {Journal Article}
 }
 
-@inproceedings{ĐorđevićYear,
+@inproceedings{DordevicYear,
    author = {Đorđević, V. and Pronic-Rancic, O. and Marinkovj , Z. and Milijj , M. and Markovic, V. and Siart, U. and Chwala, C. and Kunstmann, H.},
-   title = {New Method for Detection of Precipitation Based on Artificial Neural Networks},
+   title = {New Method for Detection of Precipitation Based on {Artificial} {Neural} {Networks}},
+   year = {2014},
    type = {Conference Proceedings}
 }
 
 @article{Doumounia2014,
    author = {Doumounia, Ali and Gosset, Marielle and Cazenave, Frederic and Kacou, Modeste and Zougmore, François},
-   title = {Rainfall monitoring based on microwave links from cellular telecommunication networks: First results from a West African test bed},
+   title = {Rainfall monitoring based on microwave links from cellular telecommunication networks: {First} results from a {West} {African} test bed},
    journal = {Geophysical Research Letters},
    volume = {41},
    number = {16},
@@ -124,6 +189,20 @@ Uncertainty},
    ISSN = {0094-8276},
    DOI = {https://doi.org/10.1002/2014GL060724},
    year = {2014},
+   type = {Journal Article}
+}
+
+@article{Duan1992,
+   author = {Duan, Qingyun and Sorooshian, Soroosh and Gupta, Vijai},
+   title = {Effective and efficient global optimization for conceptual rainfall-runoff models},
+   journal = {Water Resources Research},
+   volume = {28},
+   number = {4},
+   pages = {1015-1031},
+   abstract = {The successful application of a conceptual rainfall-runoff (CRR) model depends on how well it is calibrated. Despite the popularity of CRR models, reports in the literature indicate that it is typically difficult, if not impossible, to obtain unique optimal values for their parameters using automatic calibration methods. Unless the best set of parameters associated with a given calibration data set can be found, it is difficult to determine how sensitive the parameter estimates (and hence the model forecasts) are to factors such as input and output data error, model error, quantity and quality of data, objective function used, and so on. Results are presented that establish clearly the nature of the multiple optima problem for the research CRR model SIXPAR. These results suggest that the CRR model optimization problem is more difficult than had been previously thought and that currently used local search procedures have a very low probability of successfully finding the optimal parameter sets. Next, the performance of three existing global search procedures are evaluated on the model SIXPAR. Finally, a powerful new global optimization procedure is presented, entitled the shuffled complex evolution (SCE-UA) method, which was able to consistently locate the global optimum of the SIXPAR model, and appears to be capable of efficiently and effectively solving the CRR model optimization problem.},
+   ISSN = {0043-1397},
+   DOI = {https://doi.org/10.1029/91WR02985},
+   year = {1992},
    type = {Journal Article}
 }
 
@@ -167,7 +246,7 @@ Uncertainty},
 
 @article{RiosGaona2017b,
    author = {Gaona, M. F. Rios and Overeem, A. and Brasjen, A. M. and Meirink, J. F. and Leijnse, H. and Uijlenhoet, R.},
-   title = {Evaluation of Rainfall Products Derived From Satellites and Microwave Links for The Netherlands},
+   title = {Evaluation of Rainfall Products Derived From Satellites and Microwave Links for The {Netherlands}},
    journal = {IEEE Transactions on Geoscience and Remote Sensing},
    volume = {55},
    number = {12},
@@ -180,7 +259,7 @@ Uncertainty},
 
 @article{RiosGaona2017a,
    author = {Gaona, M.F.R. and Overeem, A. and Raupach, T.H. and Leijnse, H. and Uijlenhoet, R.},
-   title = {Rainfall retrieval with commercial microwave links in Sao Paulo, Brazil},
+   title = {Rainfall retrieval with commercial microwave links in {Sao} {Paulo}, {Brazil}},
    journal = {Atmos. Meas. Tech. },
    volume = {11},
    number = {7},
@@ -192,7 +271,7 @@ Uncertainty},
 
 @article{Graf2020,
    author = {Graf, M. and Chwala, C. and Polz, J. and Kunstmann, H.},
-   title = {Rainfall estimation from a German-wide commercial microwave link network: optimized processing and validation for 1 year of data},
+   title = {Rainfall estimation from a {German-wide} commercial microwave link network: optimized processing and validation for 1 year of data},
    journal = {Hydrol. Earth Syst. Sci.},
    volume = {24},
    number = {6},
@@ -213,22 +292,23 @@ Uncertainty},
    type = {Book}
 }
 
-@inproceedings{HabiYear,
-   author = {Habi, Hai Victor and Messer, Hagit},
-   title = {Wet-dry classification using lstm and commercial microwave links},
-   booktitle = {2018 IEEE 10th Sensor Array and Multichannel Signal Processing Workshop (SAM)},
-   publisher = {IEEE},
-   pages = {149-153},
-   ISBN = {1538647524},
-   type = {Conference Proceedings}
-}
-
 @phdthesis{Habi2019,
-   author = {Habi, V.H. },
+   author = {Habi, Hai Victor},
    title = {Rain Detection and Estimation Using Recurrent Neural Network and Commercial Microwave Link},
    university = {Tel Aviv University},
    year = {2019},
    type = {Thesis}
+}
+
+@inproceedings{HabiYear,
+   author = {Habi, Hai Victor and Messer, Hagit},
+   title = {Wet-dry classification using {LSTM} and commercial microwave links},
+   booktitle = {2018 IEEE 10th Sensor Array and Multichannel Signal Processing Workshop (SAM)},
+   publisher = {IEEE},
+   pages = {149-153},
+   ISBN = {1538647524},
+   year = {2018},
+   type = {Conference Proceedings}
 }
 
 @article{Hampel1998,
@@ -276,11 +356,12 @@ Stacked denoising autoencoder},
 
 @inproceedings{JacobyYear,
    author = {Jacoby, D. and Ostrometzky, J. and Messer, H.},
-   title = {Short-Term Prediction of the Attenuation in a Commercial Microwave Link Using LSTM-based RNN},
+   title = {Short-Term Prediction of the Attenuation in a Commercial Microwave Link Using {LSTM-based} {RNN}},
    booktitle = {2020 28th European Signal Processing Conference (EUSIPCO)},
    pages = {1628-1632},
    ISBN = {2076-1465},
    DOI = {10.23919/Eusipco47968.2020.9287835},
+   year = {2021},
    type = {Conference Proceedings}
 }
 
@@ -312,7 +393,6 @@ Batch size},
    pages = {1096-1099},
    ISSN = {0043-1397},
    DOI = {10.1029/wr008i004p01096},
-   url = {https://dx.doi.org/10.1029/wr008i004p01096},
    year = {1972},
    type = {Journal Article}
 }
@@ -326,11 +406,12 @@ Batch size},
    type = {Journal Article}
 }
 
-@misc{KNMI
+@misc{KNMI2022,
    author = {KNMI},
-   title = {Monthly weather overviews in the Netherlands},
+   title = {Monthly weather overviews in the {Netherlands}},
    number = {April 11th 2022},
    url = {https://www.knmi.nl/nederland-nu/klimatologie/gegevens/mow},
+   year = {2022},
    type = {Web Page}
 }
 
@@ -356,7 +437,6 @@ Batch size},
    pages = {n/a-n/a},
    ISSN = {0043-1397},
    DOI = {10.1029/2006wr005631},
-   url = {https://dx.doi.org/10.1029/2006wr005631},
    year = {2007},
    type = {Journal Article}
 }
@@ -386,6 +466,14 @@ Wet antennas},
    title = {Massively Parellel Hyperparameter Tuning (Unpublished)},
    year = {2018},
    type = {Conference Paper}
+}
+
+@article{Liaw2018,
+   author = {Liaw, Richard; and Liang, Eric; and Nishihara, Robert; and Moritz, Philipp; and Gonzalez, Joseph; and Stoica, Ion;},
+   title = {Tune: A Research Platform for Distributed Model Selection and Training},
+   journal = {arXiv preprint arXiv:1807.05118},
+   year = {2018},
+   type = {Journal Article}
 }
 
 @article{Lin2016,
@@ -418,7 +506,7 @@ Parameter estimation},
    type = {Journal Article}
 }
 
-@misc{2018,
+@misc{Naveen2018,
    author = {Naveen Sai, Madiraju and Sadat, Seid M. and Fisher, Dimitry and Karimabadi, Homa},
    title = {Deep Temporal Clustering : Fully Unsupervised Learning of Time-Domain Features},
    publisher = {Cornell University Library, arXiv.org},
@@ -434,16 +522,24 @@ Reduction
 Viability
 Machine learning
 Clustering},
-   url = {https://www.proquest.com/working-papers/deep-temporal-clustering-fully-unsupervised/docview/2071310996/se-2?accountid=27871
-http://library.wur.nl/link/resolve?url_ver=Z39.88-2004&rft_val_fmt=info:ofi/fmt:kev:mtx:journal&genre=preprint&sid=ProQ:ProQ%3Apubliccontent&atitle=Deep+Temporal+Clustering+%3A+Fully+Unsupervised+Learning+of+Time-Domain+Features&title=arXiv.org&issn=&date=2018-02-04&volume=&issue=&spage=&au=Naveen+Sai+Madiraju%3BSadat%2C+Seid+M%3BFisher%2C+Dimitry%3BKarimabadi%2C+Homa&isbn=&jtitle=arXiv.org&btitle=&rft_id=info:eric/&rft_id=info:doi/
-http://arxiv.org/abs/1802.01059},
    year = {2018},
    type = {Generic}
 }
 
+@article{Olsen1978,
+   author = {Olsen, Roderic and Rogers, David and Hodge, Daniel},
+   title = {The {aRb} Relation in the Calculation of Rain Attenuation},
+   journal = {Antennas and Propagation, IEEE Transactions on},
+   volume = {26},
+   pages = {318-329},
+   DOI = {10.1109/TAP.1978.1141845},
+   year = {1978},
+   type = {Journal Article}
+}
+
 @article{Overeem2021,
    author = {Overeem, Aart and Leijnse, Hidde and Leth, Thomas and Bogerd, Linda and Priebe, Jan and Tricarico, Daniele and Droste, Arjan and Uijlenhoet, Remko},
-   title = {Tropical rainfall monitoring with commercial microwave links in Sri Lanka},
+   title = {Tropical rainfall monitoring with commercial microwave links in {Sri} {Lanka}},
    journal = {Environmental Research Letters},
    volume = {16},
    DOI = {10.1088/1748-9326/ac0fa6},
@@ -574,7 +670,7 @@ Microwave links},
 
 @article{Roversi2020,
    author = {Roversi, G. and Alberoni, P. P. and Fornasiero, A. and Porcù, F.},
-   title = {Commercial microwave links as a tool for operational rainfall monitoring in Northern Italy},
+   title = {Commercial microwave links as a tool for operational rainfall monitoring in {Northern} {Italy}},
    journal = {Atmos. Meas. Tech.},
    volume = {13},
    number = {11},
@@ -588,7 +684,7 @@ Microwave links},
 
 @article{Ruf1996,
    author = {Ruf, Christopher S. and Aydin, Kultegin and Mathur, Savyasachee and Bobak, Justin P.},
-   title = {35-GHz Dual-Polarization Propagation Link for Rain-Rate Estimation},
+   title = {{35-GHz} {Dual-polarization} Propagation Link for Rain-Rate Estimation},
    journal = {Journal of Atmospheric and Oceanic Technology},
    volume = {13},
    number = {2},
@@ -601,7 +697,7 @@ Microwave links},
 
 @article{Sadeghi2019,
    author = {Sadeghi, M. and Asanjan, A. A. and Faridzad, M. and Nguyen, P. and Hsu, K. and Sorooshian, S. and Braithwaite, D.},
-   title = {PERSIANN-CNN: Precipitation Estimation from Remotely Sensed Information Using Artificial Neural Networks-Convolutional Neural Networks},
+   title = {{PERSIANN-CNN: Precipitation Estimation from Remotely Sensed Information Using Artificial Neural Networks-Convolutional Neural Networks}},
    journal = {Journal of Hydrometeorology},
    volume = {20},
    number = {12},
@@ -625,20 +721,18 @@ cloud
 classification},
    ISSN = {1525-755x},
    DOI = {10.1175/Jhm-D-19-0110.1},
-   url = {<Go to ISI>://WOS:000499430000001},
    year = {2019},
    type = {Journal Article}
 }
 
 @article{Sagheer2021,
    author = {Sagheer, Alaa and Hamdoun, Hala and Youness, Hassan},
-   title = {Deep LSTM-Based Transfer Learning Approach for Coherent Forecasts in Hierarchical Time Series},
+   title = {Deep {LSTM}-Based Transfer Learning Approach for Coherent Forecasts in Hierarchical Time Series},
    journal = {Sensors},
    volume = {21},
    number = {13},
    pages = {4379},
    ISSN = {1424-8220},
-   url = {https://www.mdpi.com/1424-8220/21/13/4379},
    year = {2021},
    type = {Journal Article}
 }
@@ -652,9 +746,35 @@ classification},
    type = {Web Page}
 }
 
+@article{Schulz1999,
+   author = {Schulz, Karsten and Beven, Keith and Huwe, Bernd},
+   title = {Equifinality and the problem of robust calibration in nitrogen budget simulations},
+   journal = {Soil Science Society of America Journal},
+   volume = {63},
+   number = {6},
+   pages = {1934-1941},
+   ISSN = {0361-5995},
+   year = {1999},
+   type = {Journal Article}
+}
+
+@article{Shamseldin2002,
+   author = {Shamseldin, A. Y. and Nasr, A. E. and O’Connor, K. M.},
+   title = {Comparison of different forms of the Multi-layer Feed-Forward Neural Network method used for river flow forecasting},
+   journal = {Hydrol. Earth Syst. Sci.},
+   volume = {6},
+   number = {4},
+   pages = {671-684},
+   note = {HESS},
+   ISSN = {1607-7938},
+   DOI = {10.5194/hess-6-671-2002},
+   year = {2002},
+   type = {Journal Article}
+}
+
 @article{Song2021,
    author = {Song, Kun and Liu, Xichuan and Gao, Taichang},
-   title = {Real-Time Rainfall Estimation Using Microwave Links: A Case Study in East China during the Plum Rain Season in 2020},
+   title = {Real-Time Rainfall Estimation Using Microwave Links: A Case Study in {East} {China} during the Plum Rain Season in 2020},
    journal = {Sensors},
    volume = {21},
    number = {3},
@@ -666,7 +786,7 @@ classification},
 
 @article{Staudemeyer2019,
    author = {Staudemeyer, Ralf C and Morris, Eric Rothstein},
-   title = {Understanding LSTM--a tutorial into long short-term memory recurrent neural networks},
+   title = {Understanding {LSTM}--a tutorial into long short-term memory recurrent neural networks},
    journal = {arXiv preprint arXiv:1909.09586},
    year = {2019},
    type = {Journal Article}
@@ -686,7 +806,7 @@ classification},
 
 @article{Turko2021,
    author = {Turko, Maxime and Gosset, Marielle and Kacou, Modeste and Bouvier, Christophe and Chahinian, Nanee and Boone, Aaron and Alcoba, Matias},
-   title = {Rainfall Measurement from Commercial Microwave Links for Urban Hydrology in Africa: A Simulation Framework for Sensitivity Analysis},
+   title = {Rainfall Measurement from Commercial Microwave Links for Urban Hydrology in {Africa}: A Simulation Framework for Sensitivity Analysis},
    journal = {Journal of Hydrometeorology},
    volume = {22},
    number = {7},
@@ -708,6 +828,25 @@ classification},
    ISSN = {2049-1948},
    DOI = {https://doi.org/10.1002/wat2.1289},
    year = {2018},
+   type = {Journal Article}
+}
+
+@article{Beek2012,
+   author = {van de Beek, C. Z. and Leijnse, H. and Torfs, P. J. J. F. and Uijlenhoet, R.},
+   title = {Seasonal semi-variance of {Dutch} rainfall at hourly to daily scales},
+   journal = {Advances in Water Resources},
+   volume = {45},
+   pages = {76-85},
+   abstract = {Using 30years (1979–2009) of data from 33 automatic rain gauges in the Netherlands, a study of the space–time variability of rainfall is performed. This study uses 90-day averaged semi-variograms to find seasonal signals in the fitted spherical semi-variogram parameters of rainrates in the Netherlands, for accumulation intervals between 1 and 24h. These signals can be well-described by simple cosine functions. The dependence of these cosine functions on the accumulation interval is modeled in two different ways: (1) power-law relations between the variogram parameters and the accumulation interval, and (2) power-law relations between the parameters of the cosine functions and the accumulation interval. For the first method the cosine function at the 24-h accumulation interval is also needed. The second of these methods has more parameters, but is shown to model the temporal scaling best. The space–time scaling relations found in this paper are compared to those found by others for similar and contrasting climates. Seasonality is shown to play an important role in determining rainfall spatial variability.},
+   keywords = {Semi-variogram
+Variance
+Rain
+Precipitation
+Raingauge},
+   ISSN = {0309-1708},
+   DOI = {https://doi.org/10.1016/j.advwatres.2012.03.023},
+   url = {https://www.sciencedirect.com/science/article/pii/S0309170812000784},
+   year = {2012},
    type = {Journal Article}
 }
 
@@ -738,7 +877,7 @@ classification},
    type = {Journal Article}
 }
 
-@article{2019,
+@article{Xu2019,
    author = {Xu, Qing and Xuan, Xiaohua},
    title = {Nonlinear regression without i.i.d. assumption},
    journal = {Probability, Uncertainty and Quantitative Risk},
@@ -749,8 +888,19 @@ classification},
    abstract = {In this paper, we consider a class of nonlinear regression problems without the assumption of being independent and identically distributed. We propose a correspondent mini-max problem for nonlinear regression and give a numerical algorithm. Such an algorithm can be applied in regression and machine learning problems, and yields better results than traditional least squares and machine learning methods.},
    ISSN = {2367-0126},
    DOI = {10.1186/s41546-019-0042-6},
-   url = {https://doi.org/10.1186/s41546-019-0042-6},
    year = {2019},
+   type = {Journal Article}
+}
+
+@article{Yoon2011,
+   author = {Yoon, Heesung and Jun, Seong-Chun and Hyun, Yunjung and Bae, Gwang-Ok and Lee, Kang-Kun},
+   title = {A comparative study of artificial neural networks and support vector machines for predicting groundwater levels in a coastal aquifer},
+   journal = {Journal of hydrology},
+   volume = {396},
+   number = {1-2},
+   pages = {128-138},
+   ISSN = {0022-1694},
+   year = {2011},
    type = {Journal Article}
 }
 
@@ -762,7 +912,6 @@ classification},
    number = {12},
    pages = {931},
    ISSN = {2073-4441},
-   url = {https://www.mdpi.com/2073-4441/9/12/931},
    year = {2017},
    type = {Journal Article}
 }
